Пока не стало хуже (добавила idDetermine для нормального определения id, но она не работает пока)

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="add-task">
         <div class="title-add-box"><span>Добавь или отредактируй задачу</span></div>
             <div class="enter">
-                <span>Введите название</span>
+                <label for="title">Введите название</label>
                 <input id="title" type="text" required>
             </div>
             <div class="enter">
-                <span>Введите дату окончания</span>
+                <label for="data">Введите дату окончания</label>
                 <input  id="data" type="text" required>
             </div>
             <button class="button-add-save" type="submit" id="buttonSubmit">Добавить</button>
