Редактирование и удаление готовы, но можно лучше (дата)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="enter">
                 <label for="data">Введите дату окончания</label>
-                <input  id="data" type="text" required>
+                <input  id="data" type="date" required>
             </div>
             <button class="button-add-save" type="reset" id="buttonSubmit">Добавить</button>
             <button class="button-edit none" type="reset" id="buttonSubmit1">Редактировать</button>
