--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     </ul>
 </div>
 <script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </body>
 </html>
